k8s/base/admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-admin
  labels:
    app.kubernetes.io/name: recipe-admin
    app.kubernetes.io/component: admin
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: recipe-admin
